test/grammar/import/import_main_file_fail_0/stderr.golden
error[E2L23]: CompileError
 --> ${CWD}/main.k:1:1
  |
1 | import module
  | ^ There is a circular import reference between module main and module
  |